--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "4.17.1",
+    "express-session": "^1.18.2",
     "mongoose": "^8.18.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.7.2",
