--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "4.17.1",
     "express-session": "^1.18.2",
     "mongoose": "^8.18.1",
+    "multer": "1.4.4",
     "nodemon": "^3.1.10",
     "socket.io": "^4.7.2",
     "uuid": "^11.1.0"
