--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "fullstack_project-client",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Daniel Bednarczyk",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:* ",
+    "start:react": "react-scripts start",
+    "start-silent": "run-p start > /dev/null",
+    "start-and-test": "run-p start-silent test ",
+    "start-and-watch": "run-p start watch ",
+    "watch": "run-p watch:* ",
+    "watch:format": "onchange 'src/**/*.js' -- prettier --write {{changed}}",
+    "refactor": "run-s refactor:*",
+    "refactor:format": "prettier --write \"src/**/*.{js,html,scss}\"",
+    "refactor:lint": "eslint src/",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --noStackTrace",
+    "test-all": "react-scripts test --watchAll=false --noStackTrace",
+    "test-related": "react-scripts test --watchAll=false --noStackTrace --findRelatedTests",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "npm run test-related --",
+      "eslint --fix",
+      "prettier --write",
+      "git add"
     ]
   },
   "browserslist": {
@@ -35,5 +45,36 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
+    "bootstrap": "^4.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.31.0",
+    "react-test-renderer": "^16.9.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.54.3",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "husky": "^3.1.0",
+    "lint-staged": "^9.4.0",
+    "onchange": "^6.1.0",
+    "prettier": "^1.19.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.5"
   }
 }
