--- a/client/package.json
+++ b/client/package.json
@@ -57,10 +57,13 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "18",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "18",
+    "react-hook-form": "^7.64.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "6",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.31.0",
     "react-test-renderer": "^16.9.0",
